# VOX-FE2

./: LICENSE
gui/VoxFETools/: CMakeLists.txt  VoxFEDefines.h  VoxFETools.qrc  VoxFEToolsSM.xml  pqVoxFEActionGroup.cxx  pqVoxFEActionGroup.h  pqVoxFEActionHolder.ui  pqVoxFEDataLoadManager.cxx  pqVoxFEDataLoadManager.h  pqVoxFEManager.cxx  pqVoxFEManager.h  pqVoxFEMeshLoadDialog.ui  pqVoxFEStrainLoadDialog.ui
gui/VoxFETools/addBoundaryCondition/: pqConstraintPropertyWidgetDecorator.cxx  pqConstraintPropertyWidgetDecorator.h  voxfeAddConstraintFilter.cxx  voxfeAddConstraintFilter.h  voxfeAddConstraintFilterDefines.h  voxfeGlyphAnnotationFilter.cxx  voxfeGlyphAnnotationFilter.h
gui/VoxFETools/doc/: Building-the-Plugin.html
gui/VoxFETools/doc/src/: Building-the-Plugin.lyx
gui/VoxFETools/itkReader/: Makefile  ReadVoxFEScript.cxx  ReadVoxFEScript.h  ReadVoxFEScript.hxx  convertVoxFEScript.h  convertVoxFEScript.hxx  convertVoxFEScriptDefines.h  convertVoxFEScriptMain.cpp  voxfeConnectedComponentImageDefines.h  voxfeConnectedComponentImageFilter.h  voxfeConnectedComponentImageFilter.hxx  voxfeITKReader.cxx  voxfeITKReader.h
gui/VoxFETools/outputScript/: voxfeOutputScriptFilter.cxx  voxfeOutputScriptFilter.h
gui/VoxFETools/plugin-doc/: index.html
gui/VoxFETools/strainReader/: CMakeLists.txt  strainReader.xml  voxfeRecomputeStrainFilter.cxx  voxfeRecomputeStrainFilter.h  voxfeStrainData.cxx  voxfeStrainData.h  voxfeStrainFilter.cxx  voxfeStrainFilter.h
gui/VoxFETools/test/bmp/: bmp-test.voxfe
gui/VoxFETools/test/mhd/: block.mhd  block.raw  block.voxfe
solver/: Makefile  buildconfig.mk
solver/src/: Commands.h  Common.h  Cons.cpp  Cons.h  Elem.cpp  Elem.h  GradientMtx.cpp  GradientMtx.h  IntegrationMtx.cpp  IntegrationMtx.h  LocalStiffnessMtx.cpp  LocalStiffnessMtx.h  Makefile  Material.cpp  Material.h  Node.cpp  Node.h  PropertyMtx.cpp  PropertyMtx.h  VoxFE.cpp  VoxFE.h  main.cpp  pFESolver.cpp  pFESolver.h
tools/ImageToModel/: DrawOval-ImageJMacro.txt  renum
tools/Remodelling/RemodelGraphControl/: Makefile  RunningStat.h  main.cxx  voxfeRemodelControl.cxx  voxfeRemodelControl.h
tools/Remodelling/RemodelGraphControl/codeblocks/remodelControl/: remodelControl.cbp  remodelControl.layout
tools/Remodelling/RemodelGraphControl/test/O/0/: constraints.txt  materials.txt  o-test.voxfe.model  o-test.voxfe.script
tools/Remodelling/Scripts/: Remodel-linux.sh  remodelling.sh  run.pbs
